# mp3_player

./: .clang-format  .gitignore  CMakeLists.txt  README.md  avisos.md  main.c  playlist.c  playlist.h  sd_card.c  sd_card.h
ref/: main.c  playlist.c  playlist.h  song.c  song.h
sdcard/: gen_songs.py
src/: playlist.c  playlist.h  sd_card.c  sd_card.h  song.c  song.h
